--- a/ESR/main.tex
+++ b/ESR/main.tex
@@ -86,6 +86,9 @@
 \section{Conclusions and Research Plan}
 \label{conclusion}
 
+\section{Appendix}
+\label{appendix}
+
 \bibliography{references.bib}
 % \bibliographystyle{unsrt}
 \end{document}
