--- a/ESR/main.tex
+++ b/ESR/main.tex
@@ -33,6 +33,10 @@
 
 \theoremstyle{remark}
 \newtheorem*{remark}{\textbf{Remark}}  % if don't want bold face for remark remove textbf
+
+\theoremstyle{remark}
+\newtheorem*{remarks}{\textbf{Remarks}}
+
 %-------------------------------
 
 \DeclareMathOperator{\E}{\mathds{E}}
@@ -77,8 +81,9 @@
 \label{general_framework}
 \input{general_framework.tex}
 
-\section{FEM for Elliptic Boundary Value Problem}
+\section{Statistical FEM for Elliptic Boundary Value Problem}
 \label{elliptic_bv_prob}
+\input{elliptic_bvp.tex}
 
 \section{FEM for Parabolic Problem}
 \label{parabolic_prob}
